--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,4 +66,4 @@ jobs:
         run: |
           SHORT_SHA="${GITHUB_SHA:0:7}"
           echo "Pushing image with tag: $SHORT_SHA"
-          docker push $GCP_PROJECT-docker.pkg.dev/$GCP_PROJECT/$AR_REPOSITORY/$IMAGE_NAME:${SHORT_SHA}
+          docker push $GCP_REGION-docker.pkg.dev/$GCP_PROJECT/$AR_REPOSITORY/$IMAGE_NAME:${SHORT_SHA}
