--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,6 +39,7 @@ jobs:
         with:
           go-version: "1.23"
       - run: cd labs/desafios/weather-cep && go test ./...
+
   build-labs_desafios_weather_cep:
     needs: test-labs_desafios_weather_cep
     runs-on: ubuntu-latest
@@ -70,7 +71,8 @@ jobs:
 
           echo "Pushing image with tag: $SHORT_SHA"
           docker push $TAG
-          echo "IMAGE_URL=$TAG" >> $GITHUB_ENV
+          echo "image_url=$TAG" >> $GITHUB_OUTPUT
+
   deploy-labs_desafios_weather_cep:
     runs-on: ubuntu-latest
     needs: build-labs_desafios_weather_cep
@@ -84,7 +86,7 @@ jobs:
       
       - name: deploy to cloud run
         run: |
-          gcloud run deploy $SERVICE_NAME \
+          gcloud run deploy ${{ needs.build-labs_desafios_weather_cep.outputs.image_url }} \
             --image ${{ env.IMAGE_URL }} \
             --region $GCP_REGION \
             --platform managed \
