--- a/labs/desafios/otel/service_a/Dockerfile
+++ b/labs/desafios/otel/service_a/Dockerfile
@@ -1,9 +1,10 @@
 FROM golang:1.24 as build
 WORKDIR /app
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o service_a
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go mod tidy
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o service_a cmd/main.go
 
 FROM scratch
 WORKDIR /app
 COPY --from=build /app/service_a .
-ENTRYPOINT [ "service_a" ]
+ENTRYPOINT [ "./service_a" ]
